--- a/python_snippets/HMEQ_Train_RegisterMM_Astore_GBM_Model.ipynb
+++ b/python_snippets/HMEQ_Train_RegisterMM_Astore_GBM_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -31,10 +31,10 @@
      "text": [
       "NOTE: 'Public' is now the active caslib.\n",
       "NOTE: Action 'sessionProp.setSessOpt' used (Total process time):\n",
-      "NOTE:       real time               0.000490 seconds\n",
-      "NOTE:       cpu time                0.000415 seconds (84.69%)\n",
-      "NOTE:       total nodes             1 (32 cores)\n",
-      "NOTE:       total memory            125.74G\n",
+      "NOTE:       real time               0.000250 seconds\n",
+      "NOTE:       cpu time                0.000239 seconds (95.60%)\n",
+      "NOTE:       total nodes             1 (16 cores)\n",
+      "NOTE:       total memory            62.67G\n",
       "NOTE:       memory                  262.06K (0.00%)\n"
      ]
     },
@@ -42,13 +42,13 @@
      "data": {
       "text/html": [
        "<div class=\"cas-output-area\"></div>\n",
-       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.00049s</span> &#183; <span class=\"cas-user\">user 0.000415s</span> &#183; <span class=\"cas-memory\">mem 0.256MB</span></small></p>"
+       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.00025s</span> &#183; <span class=\"cas-user\">user 0.000178s</span> &#183; <span class=\"cas-sys\">sys 6.1e-05s</span> &#183; <span class=\"cas-memory\">mem 0.256MB</span></small></p>"
       ],
       "text/plain": [
-       "+ Elapsed: 0.00049s, user: 0.000415s, mem: 0.256mb"
+       "+ Elapsed: 0.00025s, user: 0.000178s, sys: 6.1e-05s, mem: 0.256mb"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "(2381, 13)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
+       "      <td>count</td>\n",
        "      <td>2381.000000</td>\n",
        "      <td>2381.000000</td>\n",
        "      <td>2178.000000</td>\n",
@@ -148,7 +148,7 @@
        "      <td>1873.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
+       "      <td>mean</td>\n",
        "      <td>0.199916</td>\n",
        "      <td>18216.463671</td>\n",
        "      <td>73888.350849</td>\n",
@@ -162,7 +162,7 @@
        "      <td>33.473330</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
+       "      <td>std</td>\n",
        "      <td>0.400021</td>\n",
        "      <td>10669.354029</td>\n",
        "      <td>43967.539209</td>\n",
@@ -176,7 +176,7 @@
        "      <td>8.228359</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
+       "      <td>min</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1300.000000</td>\n",
        "      <td>2619.000000</td>\n",
@@ -190,7 +190,7 @@
        "      <td>0.524499</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25%</th>\n",
+       "      <td>25%</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>10800.000000</td>\n",
        "      <td>46057.000000</td>\n",
@@ -204,7 +204,7 @@
        "      <td>28.638063</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50%</th>\n",
+       "      <td>50%</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>16000.000000</td>\n",
        "      <td>64811.000000</td>\n",
@@ -218,7 +218,7 @@
        "      <td>34.644922</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75%</th>\n",
+       "      <td>75%</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>23000.000000</td>\n",
        "      <td>92487.000000</td>\n",
@@ -232,7 +232,7 @@
        "      <td>38.942760</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>max</th>\n",
+       "      <td>max</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>89000.000000</td>\n",
        "      <td>369874.000000</td>\n",
@@ -250,38 +250,18 @@
        "</div>"
       ],
       "text/plain": [
-       "               BAD          LOAN        MORTDUE          VALUE          YOJ  \\\n",
-       "count  2381.000000   2381.000000    2178.000000    2339.000000  2184.000000   \n",
-       "mean      0.199916  18216.463671   73888.350849  102594.821005     8.851671   \n",
-       "std       0.400021  10669.354029   43967.539209   58102.560140     7.520705   \n",
-       "min       0.000000   1300.000000    2619.000000    9100.000000     0.000000   \n",
-       "25%       0.000000  10800.000000   46057.000000   66410.000000     3.000000   \n",
-       "50%       0.000000  16000.000000   64811.000000   89079.000000     7.000000   \n",
-       "75%       0.000000  23000.000000   92487.000000  121382.000000    13.000000   \n",
-       "max       1.000000  89000.000000  369874.000000  855909.000000    41.000000   \n",
-       "\n",
-       "             DEROG       DELINQ        CLAGE         NINQ         CLNO  \\\n",
-       "count  2105.000000  2153.000000  2255.000000  2189.000000  2290.000000   \n",
-       "mean      0.230404     0.449141   178.606762     1.172225    21.217467   \n",
-       "std       0.754975     1.094231    85.735499     1.721473    10.055845   \n",
-       "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
-       "25%       0.000000     0.000000   115.136885     0.000000    15.000000   \n",
-       "50%       0.000000     0.000000   172.696685     1.000000    20.000000   \n",
-       "75%       0.000000     0.000000   229.177959     2.000000    26.000000   \n",
-       "max      10.000000    10.000000  1168.233561    14.000000    71.000000   \n",
-       "\n",
-       "           DEBTINC  \n",
-       "count  1873.000000  \n",
-       "mean     33.473330  \n",
-       "std       8.228359  \n",
-       "min       0.524499  \n",
-       "25%      28.638063  \n",
-       "50%      34.644922  \n",
-       "75%      38.942760  \n",
-       "max     143.949605  "
+       "               BAD          LOAN        MORTDUE          VALUE          YOJ        DEROG       DELINQ        CLAGE         NINQ         CLNO      DEBTINC\n",
+       "count  2381.000000   2381.000000    2178.000000    2339.000000  2184.000000  2105.000000  2153.000000  2255.000000  2189.000000  2290.000000  1873.000000\n",
+       "mean      0.199916  18216.463671   73888.350849  102594.821005     8.851671     0.230404     0.449141   178.606762     1.172225    21.217467    33.473330\n",
+       "std       0.400021  10669.354029   43967.539209   58102.560140     7.520705     0.754975     1.094231    85.735499     1.721473    10.055845     8.228359\n",
+       "min       0.000000   1300.000000    2619.000000    9100.000000     0.000000     0.000000     0.000000     0.000000     0.000000     0.000000     0.524499\n",
+       "25%       0.000000  10800.000000   46057.000000   66410.000000     3.000000     0.000000     0.000000   115.136885     0.000000    15.000000    28.638063\n",
+       "50%       0.000000  16000.000000   64811.000000   89079.000000     7.000000     0.000000     0.000000   172.696685     1.000000    20.000000    34.644922\n",
+       "75%       0.000000  23000.000000   92487.000000  121382.000000    13.000000     0.000000     0.000000   229.177959     2.000000    26.000000    38.942760\n",
+       "max       1.000000  89000.000000  369874.000000  855909.000000    41.000000    10.000000    10.000000  1168.233561    14.000000    71.000000   143.949605"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -309,19 +289,19 @@
       "NOTE: Executing action 'builtins.loadActionSet'.\n",
       "NOTE: Added action set 'decisionTree'.\n",
       "NOTE: Action 'builtins.loadActionSet' used (Total process time):\n",
-      "NOTE:       real time               0.002772 seconds\n",
-      "NOTE:       cpu time                0.002697 seconds (97.29%)\n",
-      "NOTE:       total nodes             1 (32 cores)\n",
-      "NOTE:       total memory            125.74G\n",
-      "NOTE:       memory                  226.00K (0.00%)\n",
+      "NOTE:       real time               0.003676 seconds\n",
+      "NOTE:       cpu time                0.003639 seconds (98.99%)\n",
+      "NOTE:       total nodes             1 (16 cores)\n",
+      "NOTE:       total memory            62.67G\n",
+      "NOTE:       memory                  225.91K (0.00%)\n",
       "NOTE: Executing action 'decisionTree.gbtreeTrain'.\n",
-      "NOTE: 924835 bytes were written to the table \"gradboost_astore\" in the caslib \"Public\".\n",
+      "NOTE: 914523 bytes were written to the table \"gradboost_astore\" in the caslib \"Public\".\n",
       "NOTE: Action 'decisionTree.gbtreeTrain' used (Total process time):\n",
-      "NOTE:       real time               0.631684 seconds\n",
-      "NOTE:       cpu time                1.470797 seconds (232.84%)\n",
-      "NOTE:       total nodes             1 (32 cores)\n",
-      "NOTE:       total memory            125.74G\n",
-      "NOTE:       memory                  124.52M (0.10%)\n"
+      "NOTE:       real time               0.379119 seconds\n",
+      "NOTE:       cpu time                0.523401 seconds (138.06%)\n",
+      "NOTE:       total nodes             1 (16 cores)\n",
+      "NOTE:       total memory            62.67G\n",
+      "NOTE:       memory                  64.72M (0.10%)\n"
      ]
     }
    ],
@@ -345,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -355,26 +335,26 @@
       "NOTE: Executing action 'builtins.loadActionSet'.\n",
       "NOTE: Added action set 'astore'.\n",
       "NOTE: Action 'builtins.loadActionSet' used (Total process time):\n",
-      "NOTE:       real time               0.001345 seconds\n",
-      "NOTE:       cpu time                0.001314 seconds (97.70%)\n",
-      "NOTE:       total nodes             1 (32 cores)\n",
-      "NOTE:       total memory            125.74G\n",
-      "NOTE:       memory                  209.84K (0.00%)\n",
+      "NOTE:       real time               0.000748 seconds\n",
+      "NOTE:       cpu time                0.000735 seconds (98.26%)\n",
+      "NOTE:       total nodes             1 (16 cores)\n",
+      "NOTE:       total memory            62.67G\n",
+      "NOTE:       memory                  209.78K (0.00%)\n",
       "NOTE: Executing action 'astore.describe'.\n",
       "NOTE: Action 'astore.describe' used (Total process time):\n",
-      "NOTE:       real time               0.017702 seconds\n",
-      "NOTE:       cpu time                0.017620 seconds (99.54%)\n",
-      "NOTE:       total nodes             1 (32 cores)\n",
-      "NOTE:       total memory            125.74G\n",
+      "NOTE:       real time               0.013592 seconds\n",
+      "NOTE:       cpu time                0.013586 seconds (99.96%)\n",
+      "NOTE:       total nodes             1 (16 cores)\n",
+      "NOTE:       total memory            62.67G\n",
       "NOTE:       memory                  6.86M (0.01%)\n",
       "NOTE: Executing action 'table.save'.\n",
-      "NOTE: Cloud Analytic Services saved the file _6ED7DB00C3B142569A8CE034C.sashdat in caslib ModelStore.\n",
+      "NOTE: Cloud Analytic Services saved the file _332A53918D6D46FF928461F26.sashdat in caslib ModelStore.\n",
       "NOTE: Action 'table.save' used (Total process time):\n",
-      "NOTE:       real time               0.021998 seconds\n",
-      "NOTE:       cpu time                0.004053 seconds (18.42%)\n",
-      "NOTE:       total nodes             1 (32 cores)\n",
-      "NOTE:       total memory            125.74G\n",
-      "NOTE:       memory                  16.55M (0.01%)\n"
+      "NOTE:       real time               0.015850 seconds\n",
+      "NOTE:       cpu time                0.002654 seconds (16.74%)\n",
+      "NOTE:       total nodes             1 (16 cores)\n",
+      "NOTE:       total memory            62.67G\n",
+      "NOTE:       memory                  16.54M (0.03%)\n"
      ]
     }
    ],
@@ -392,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
