--- a/python_snippets/HMEQ_Train_RegisterMM_Astore_GBM_Model.ipynb
+++ b/python_snippets/HMEQ_Train_RegisterMM_Astore_GBM_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -31,24 +31,24 @@
      "text": [
       "NOTE: 'Public' is now the active caslib.\n",
       "NOTE: Action 'sessionProp.setSessOpt' used (Total process time):\n",
-      "NOTE:       real time               0.000250 seconds\n",
-      "NOTE:       cpu time                0.000239 seconds (95.60%)\n",
+      "NOTE:       real time               0.000270 seconds\n",
+      "NOTE:       cpu time                0.000256 seconds (94.81%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
       "NOTE:       total memory            62.67G\n",
-      "NOTE:       memory                  262.06K (0.00%)\n"
+      "NOTE:       memory                  280.44K (0.00%)\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<div class=\"cas-output-area\"></div>\n",
-       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.00025s</span> &#183; <span class=\"cas-user\">user 0.000178s</span> &#183; <span class=\"cas-sys\">sys 6.1e-05s</span> &#183; <span class=\"cas-memory\">mem 0.256MB</span></small></p>"
+       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.00027s</span> &#183; <span class=\"cas-user\">user 0.000154s</span> &#183; <span class=\"cas-sys\">sys 0.000102s</span> &#183; <span class=\"cas-memory\">mem 0.274MB</span></small></p>"
       ],
       "text/plain": [
-       "+ Elapsed: 0.00025s, user: 0.000178s, sys: 6.1e-05s, mem: 0.256mb"
+       "+ Elapsed: 0.00027s, user: 0.000154s, sys: 0.000102s, mem: 0.274mb"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "(2381, 13)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "max       1.000000  89000.000000  369874.000000  855909.000000    41.000000    10.000000    10.000000  1168.233561    14.000000    71.000000   143.949605"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,12 +274,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train a gradient boosting model to identify iris species."
+    "# Train a gradient boosting model to predict credit risk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -289,24 +289,61 @@
       "NOTE: Executing action 'builtins.loadActionSet'.\n",
       "NOTE: Added action set 'decisionTree'.\n",
       "NOTE: Action 'builtins.loadActionSet' used (Total process time):\n",
-      "NOTE:       real time               0.003676 seconds\n",
-      "NOTE:       cpu time                0.003639 seconds (98.99%)\n",
+      "NOTE:       real time               0.011006 seconds\n",
+      "NOTE:       cpu time                0.002266 seconds (20.59%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
       "NOTE:       total memory            62.67G\n",
-      "NOTE:       memory                  225.91K (0.00%)\n",
+      "NOTE:       memory                  245.31K (0.00%)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"cas-results-key\"><b>&#167; actionset</b></div>\n",
+       "<div class=\"cas-results-body\">\n",
+       "<div>decisionTree</div>\n",
+       "</div>\n",
+       "<div class=\"cas-output-area\"></div>\n",
+       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.011s</span> &#183; <span class=\"cas-user\">user 0.0014s</span> &#183; <span class=\"cas-sys\">sys 0.00087s</span> &#183; <span class=\"cas-memory\">mem 0.24MB</span></small></p>"
+      ],
+      "text/plain": [
+       "[actionset]\n",
+       "\n",
+       " 'decisionTree'\n",
+       "\n",
+       "+ Elapsed: 0.011s, user: 0.0014s, sys: 0.00087s, mem: 0.24mb"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.loadactionset('decisionTree')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "NOTE: Executing action 'decisionTree.gbtreeTrain'.\n",
-      "NOTE: 914523 bytes were written to the table \"gradboost_astore\" in the caslib \"Public\".\n",
+      "NOTE: 908811 bytes were written to the table \"gradboost_astore\" in the caslib \"Public\".\n",
       "NOTE: Action 'decisionTree.gbtreeTrain' used (Total process time):\n",
-      "NOTE:       real time               0.379119 seconds\n",
-      "NOTE:       cpu time                0.523401 seconds (138.06%)\n",
+      "NOTE:       real time               0.399389 seconds\n",
+      "NOTE:       cpu time                0.525802 seconds (131.65%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
       "NOTE:       total memory            62.67G\n",
-      "NOTE:       memory                  64.72M (0.10%)\n"
+      "NOTE:       memory                  64.74M (0.10%)\n"
      ]
     }
    ],
    "source": [
-    "s.loadactionset('decisionTree')\n",
     "castbl.decisiontree.gbtreetrain(target='BAD',\n",
     "                             inputs=['LOAN','MORTDUE','VALUE','YOJ','DEROG','DELINQ','CLAGE','NINQ','CLNO','DEBTINC'],\n",
     "                             nominals=['BAD'],\n",
@@ -320,12 +357,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Train a random forest model to predict credit risk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOTE: Executing action 'decisionTree.forestTrain'.\n",
+      "NOTE: 12834419 bytes were written to the table \"forest_astore\" in the caslib \"Public\".\n",
+      "NOTE: Action 'decisionTree.forestTrain' used (Total process time):\n",
+      "NOTE:       real time               1.023330 seconds\n",
+      "NOTE:       cpu time                4.561973 seconds (445.80%)\n",
+      "NOTE:       total nodes             1 (16 cores)\n",
+      "NOTE:       total memory            62.67G\n",
+      "NOTE:       memory                  170.63M (0.27%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "castbl.decisionTree.forestTrain(\n",
+    "            inputs=['LOAN','MORTDUE','VALUE','YOJ','DEROG','DELINQ','CLAGE','NINQ','CLNO','DEBTINC'],\n",
+    "            ntrees=100,\n",
+    "            maxlevel=20,\n",
+    "            bootstrap=0.6,\n",
+    "            leafsize=5,\n",
+    "            nbins=50,\n",
+    "            vote='PROB',\n",
+    "            seed=12345,\n",
+    "            loh=0,\n",
+    "            quantilebin='TRUE',\n",
+    "            maxbranch=2,\n",
+    "            missing='USEINSEARCH',\n",
+    "            minuseinsearch=1,\n",
+    "            target=\"BAD\",\n",
+    "            nominals=['BAD'],\n",
+    "            savestate={'name':'forest_astore','replace':'true'})\n",
+    "\n",
+    "astore = s.CASTable('forest_astore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Register the model in the central repository for versioning and deployment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -335,23 +421,23 @@
       "NOTE: Executing action 'builtins.loadActionSet'.\n",
       "NOTE: Added action set 'astore'.\n",
       "NOTE: Action 'builtins.loadActionSet' used (Total process time):\n",
-      "NOTE:       real time               0.000748 seconds\n",
-      "NOTE:       cpu time                0.000735 seconds (98.26%)\n",
+      "NOTE:       real time               0.000823 seconds\n",
+      "NOTE:       cpu time                0.000811 seconds (98.54%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
       "NOTE:       total memory            62.67G\n",
-      "NOTE:       memory                  209.78K (0.00%)\n",
+      "NOTE:       memory                  232.53K (0.00%)\n",
       "NOTE: Executing action 'astore.describe'.\n",
       "NOTE: Action 'astore.describe' used (Total process time):\n",
-      "NOTE:       real time               0.013592 seconds\n",
-      "NOTE:       cpu time                0.013586 seconds (99.96%)\n",
+      "NOTE:       real time               0.171160 seconds\n",
+      "NOTE:       cpu time                0.171107 seconds (99.97%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
       "NOTE:       total memory            62.67G\n",
       "NOTE:       memory                  6.86M (0.01%)\n",
       "NOTE: Executing action 'table.save'.\n",
-      "NOTE: Cloud Analytic Services saved the file _332A53918D6D46FF928461F26.sashdat in caslib ModelStore.\n",
+      "NOTE: Cloud Analytic Services saved the file _561A0CC5215D4468BCFF0D74D.sashdat in caslib ModelStore.\n",
       "NOTE: Action 'table.save' used (Total process time):\n",
-      "NOTE:       real time               0.015850 seconds\n",
-      "NOTE:       cpu time                0.002654 seconds (16.74%)\n",
+      "NOTE:       real time               0.066812 seconds\n",
+      "NOTE:       cpu time                0.024052 seconds (36.00%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
       "NOTE:       total memory            62.67G\n",
       "NOTE:       memory                  16.54M (0.03%)\n"
@@ -360,32 +446,107 @@
    ],
    "source": [
     "with Session('frasepviya35smp', 'viyademo01', 'demopw'):\n",
-    "    model = register_model(astore, 'Gradient Boosting Astore SWAT', 'HMEQ_Modeling', force=True)"
+    "    model = register_model(astore, 'Random forest model', 'HMEQ_Modeling', force=True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_code_file  = open(\"/home/viyademo01/FrasepProjects/python_snippets/HMEQ_Train_RegisterMM_Astore_GBM_Model.ipynb\", \"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOTE: Executing action 'builtins.loadActionSet'.\n",
+      "NOTE: Added action set 'astore'.\n",
+      "NOTE: Action 'builtins.loadActionSet' used (Total process time):\n",
+      "NOTE:       real time               0.000425 seconds\n",
+      "NOTE:       cpu time                0.000361 seconds (84.94%)\n",
+      "NOTE:       total nodes             1 (16 cores)\n",
+      "NOTE:       total memory            62.67G\n",
+      "NOTE:       memory                  228.19K (0.00%)\n",
+      "NOTE: Executing action 'astore.describe'.\n",
+      "NOTE: Action 'astore.describe' used (Total process time):\n",
+      "NOTE:       real time               0.144745 seconds\n",
+      "NOTE:       cpu time                0.144717 seconds (99.98%)\n",
+      "NOTE:       total nodes             1 (16 cores)\n",
+      "NOTE:       total memory            62.67G\n",
+      "NOTE:       memory                  6.89M (0.01%)\n",
+      "NOTE: Executing action 'table.save'.\n",
+      "NOTE: Cloud Analytic Services saved the file _6AC74FFF1E394B96A38DD0BA3.sashdat in caslib ModelStore.\n",
+      "NOTE: Action 'table.save' used (Total process time):\n",
+      "NOTE:       real time               0.064018 seconds\n",
+      "NOTE:       cpu time                0.018753 seconds (29.29%)\n",
+      "NOTE:       total nodes             1 (16 cores)\n",
+      "NOTE:       total memory            62.67G\n",
+      "NOTE:       memory                  16.56M (0.03%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with Session('frasepviya35smp', 'viyademo01', 'demopw'):\n",
+    "    model = register_model(astore, 'Random forest model', 'HMEQ_Modeling', force=True)\n",
+    "    model_repository.add_model_content(model, file=training_code_file, name='traning_code.ipynb')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optional : trigger model deployment and scoring from Python API"
+    "# Optional : deploy the model on the SAS Viya realtime API engine for consumption in business applications"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "with Session('frasepviya35smp', 'viyademo01', 'demopw'):\n",
-    "    module = publish_model(model, 'maslocal',replace=1)\n",
-    "\n",
-    "    # sasctl wraps the published module with Python methods corresponding to the various steps defined in the module (like \"predict\").\n",
-    "    #response = module.score(SepalLength=5.1, SepalWidth=3.5, PetalLength=1.4, PetalWidth=0.2)"
+    "    module = publish_model(model, 'maslocal',replace=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optional : use the API to score data in Python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5440674603174604, 0.4559325396825396, '1', '')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = module.score(LOAN=10,MORTDUE=1,VALUE=1,YOJ=10,DEROG=1,DELINQ=10,CLAGE=1,NINQ=1,CLNO=1,DEBTINC=1)\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
