--- a/python_snippets/python_swat_model_training_and_register.ipynb
+++ b/python_snippets/python_swat_model_training_and_register.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -118,14 +118,14 @@
        "<div>percentile</div>\n",
        "</div>\n",
        "<div class=\"cas-output-area\"></div>\n",
-       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.000445s</span> &#183; <span class=\"cas-user\">user 0.000223s</span> &#183; <span class=\"cas-sys\">sys 0.000166s</span> &#183; <span class=\"cas-memory\">mem 0.203MB</span></small></p>"
+       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.000268s</span> &#183; <span class=\"cas-user\">user 0.000144s</span> &#183; <span class=\"cas-sys\">sys 9.8e-05s</span> &#183; <span class=\"cas-memory\">mem 0.221MB</span></small></p>"
       ],
       "text/plain": [
        "[actionset]\n",
        "\n",
        " 'percentile'\n",
        "\n",
-       "+ Elapsed: 0.000445s, user: 0.000223s, sys: 0.000166s, mem: 0.203mb"
+       "+ Elapsed: 0.000268s, user: 0.000144s, sys: 9.8e-05s, mem: 0.221mb"
       ]
      },
      "execution_count": 5,
@@ -134,8 +134,6 @@
     }
    ],
    "source": [
-    "import swat\n",
-    "\n",
     "os.environ[\"CAS_CLIENT_SSL_CA_LIST\"] = \"/opt/sas/viya/config/etc/SASSecurityCertificateFramework/cacerts/trustedcerts.pem\"\n",
     "\n",
     "# type password\n",
@@ -1724,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
