--- a/python_snippets/VA_in_Jupyer.ipynb
+++ b/python_snippets/VA_in_Jupyer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     {
      "data": {
       "text/html": [
-       "<script async src=\"https://unpkg.com/@sassoftware/va-report-components@0.3/dist/umd/va-report-components.js\"></script>"
+       "<script async src=\"https://unpkg.com/@sassoftware/va-report-components@0.18.0/dist/umd/va-report-components.js\"></script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -48,7 +48,9 @@
     }
    ],
    "source": [
-    "HTML('<script async src=\"https://unpkg.com/@sassoftware/va-report-components@0.3/dist/umd/va-report-components.js\"></script>')"
+    "#HTML('<script async src=\"https://unpkg.com/@sassoftware/va-report-components@0.3/dist/umd/va-report-components.js\"></script>')\n",
+    "\n",
+    "HTML('<script async src=\"https://unpkg.com/@sassoftware/va-report-components@0.18.0/dist/umd/va-report-components.js\"></script>')"
    ]
   },
   {
@@ -81,6 +83,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HTML(style_css+'''\n",
+    "<sas-report-object objectName=\"ve503\" \n",
+    " authenticationType=\"guest\"\n",
+    " url=\"https://frasepviya35smp.cloud.com\"\n",
+    " reportUri=\"/reports/reports/327758f4-f9ac-43c9-9342-f43a40291580\"\n",
+    " class=\"exploreResults\"\n",
+    "></sas-report-object>''')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -92,13 +109,11 @@
        "    width: 100%;\n",
        "    height: 20em;\n",
        "  }\n",
-       "</style>\n",
-       "<sas-report-object objectName=\"ve503\" \n",
+       "</style><sas-report hideNavigation=\"auto\"\n",
        " authenticationType=\"guest\"\n",
-       " url=\"http://sasserver.demo.sas.com\"\n",
-       " reportUri=\"/reports/reports/35e0f439-eda0-4a90-b61b-b40194c524cd\"\n",
-       " class=\"exploreResults\"\n",
-       "></sas-report-object>"
+       " url=\"https://frasepviya35smp.cloud.com\"\n",
+       " reportUri=\"/reports/reports/327758f4-f9ac-43c9-9342-f43a40291580\"\n",
+       "></sas-report>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -110,54 +125,19 @@
     }
    ],
    "source": [
-    "HTML(style_css+'''\n",
-    "<sas-report-object objectName=\"ve503\" \n",
+    "HTML(style_css+'''<sas-report hideNavigation=\"auto\"\n",
     " authenticationType=\"guest\"\n",
-    " url=\"http://sasserver.demo.sas.com\"\n",
-    " reportUri=\"/reports/reports/35e0f439-eda0-4a90-b61b-b40194c524cd\"\n",
-    " class=\"exploreResults\"\n",
-    "></sas-report-object>''')"
+    " url=\"https://frasepviya35smp.cloud.com\"\n",
+    " reportUri=\"/reports/reports/327758f4-f9ac-43c9-9342-f43a40291580\"\n",
+    "></sas-report>''')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "  .exploreResults {\n",
-       "    width: 100%;\n",
-       "    height: 20em;\n",
-       "  }\n",
-       "</style>\n",
-       "<sas-report-object objectName=\"ve475\"\n",
-       " authenticationType=\"guest\"\n",
-       " url=\"http://sasserver.demo.sas.com\"\n",
-       " reportUri=\"/reports/reports/35e0f439-eda0-4a90-b61b-b40194c524cd\"\n",
-       " class=\"exploreResults\"\n",
-       "></sas-report-object>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "HTML(style_css+'''\n",
-    "<sas-report-object objectName=\"ve475\"\n",
-    " authenticationType=\"guest\"\n",
-    " url=\"http://sasserver.demo.sas.com\"\n",
-    " reportUri=\"/reports/reports/35e0f439-eda0-4a90-b61b-b40194c524cd\"\n",
-    " class=\"exploreResults\"\n",
-    "></sas-report-object>''')"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -176,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
