updates r et python

--- a/python_snippets/VA_in_Jupyer.ipynb
+++ b/python_snippets/VA_in_Jupyer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -42,14 +37,12 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#HTML('<script async src=\"https://unpkg.com/@sassoftware/va-report-components@0.3/dist/umd/va-report-components.js\"></script>')\n",
-    "\n",
     "HTML('<script async src=\"https://unpkg.com/@sassoftware/va-report-components@0.18.0/dist/umd/va-report-components.js\"></script>')"
    ]
   },
@@ -62,43 +55,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "style_css = '''<style>\n",
     "  .exploreResults {\n",
     "    width: 100%;\n",
-    "    height: 20em;\n",
+    "    height: 30%;\n",
     "  }\n",
     "</style>'''"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Examples"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "HTML(style_css+'''\n",
-    "<sas-report-object objectName=\"ve503\" \n",
-    " authenticationType=\"guest\"\n",
-    " url=\"https://frasepviya35smp.cloud.com\"\n",
-    " reportUri=\"/reports/reports/327758f4-f9ac-43c9-9342-f43a40291580\"\n",
-    " class=\"exploreResults\"\n",
-    "></sas-report-object>''')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -107,37 +78,32 @@
        "<style>\n",
        "  .exploreResults {\n",
        "    width: 100%;\n",
-       "    height: 20em;\n",
+       "    height: 30%;\n",
        "  }\n",
-       "</style><sas-report hideNavigation=\"auto\"\n",
+       "</style>\n",
+       "<sas-report-object objectName=\"ve152\"\n",
        " authenticationType=\"guest\"\n",
        " url=\"https://frasepviya35smp.cloud.com\"\n",
-       " reportUri=\"/reports/reports/327758f4-f9ac-43c9-9342-f43a40291580\"\n",
-       "></sas-report>"
+       " reportUri=\"/reports/reports/cbf97b0a-457d-4b4f-8913-547e0cdf390c\"\n",
+       "></sas-report-object>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "HTML(style_css+'''<sas-report hideNavigation=\"auto\"\n",
+    "HTML(style_css+'''\n",
+    "<sas-report-object objectName=\"ve152\"\n",
     " authenticationType=\"guest\"\n",
     " url=\"https://frasepviya35smp.cloud.com\"\n",
-    " reportUri=\"/reports/reports/327758f4-f9ac-43c9-9342-f43a40291580\"\n",
-    "></sas-report>''')"
+    " reportUri=\"/reports/reports/cbf97b0a-457d-4b4f-8913-547e0cdf390c\"\n",
+    "></sas-report-object>''')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
